# ai-stock-price-forecasting

./: .editorconfig  README.md  mypy.ini  package.json  pyproject.toml  renovate.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: ci.yaml
.github/workflows/: ci.yaml
.husky/: commit-msg  pre-commit
api/: Dockerfile
api/src/: application.py
api/src/hello_svc/: views.py
api/tests/: conftest.py  test_home_route.py
src/: app.py  main.py  stocks.db
src/api/: application.py  main.py
src/api/hello_svc/: views.py
src/data/: exceptions.py
src/data/repositories/: sqlite_stock_repository.py
src/data/services/: exceptions.py  stock_data_service.py
src/pages/: dashboard_page.py  search_page.py  stocks_page.py
src/tests/: conftest.py  test_home_route.py
src/tests/sqlite_stock_repository/: conftest.py  test_sqlite_stock_repository.py
tests/data/repositories/sqlite_stock_repository/: conftest.py  test_sqlite_stock_repository.py
